Remove extra checking for Mac OS (not actually necessary)

--- a/test/check_voices.ipynb
+++ b/test/check_voices.ipynb
@@ -6,19 +6,270 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "'macOS-10.16-x86_64-i386-64bit'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import platform\n",
+    "platform.platform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Voice id=HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Speech\\Voices\\Tokens\\TTS_MS_EN-US_DAVID_11.0\n",
-      "          name=Microsoft David Desktop - English (United States)\n",
-      "          languages=[]\n",
-      "          gender=None\n",
-      "          age=None> HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Speech\\Voices\\Tokens\\TTS_MS_EN-US_DAVID_11.0\n",
-      "<Voice id=HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Speech\\Voices\\Tokens\\TTS_MS_EN-US_ZIRA_11.0\n",
-      "          name=Microsoft Zira Desktop - English (United States)\n",
-      "          languages=[]\n",
-      "          gender=None\n",
-      "          age=None> HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Speech\\Voices\\Tokens\\TTS_MS_EN-US_ZIRA_11.0\n"
+      "<Voice id=com.apple.speech.synthesis.voice.Alex\n",
+      "          name=Alex\n",
+      "          languages=['en_US']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.Alex\n",
+      "<Voice id=com.apple.speech.synthesis.voice.alice\n",
+      "          name=Alice\n",
+      "          languages=['it_IT']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.alice\n",
+      "<Voice id=com.apple.speech.synthesis.voice.alva\n",
+      "          name=Alva\n",
+      "          languages=['sv_SE']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.alva\n",
+      "<Voice id=com.apple.speech.synthesis.voice.amelie\n",
+      "          name=Amelie\n",
+      "          languages=['fr_CA']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.amelie\n",
+      "<Voice id=com.apple.speech.synthesis.voice.anna\n",
+      "          name=Anna\n",
+      "          languages=['de_DE']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.anna\n",
+      "<Voice id=com.apple.speech.synthesis.voice.carmit\n",
+      "          name=Carmit\n",
+      "          languages=['he_IL']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.carmit\n",
+      "<Voice id=com.apple.speech.synthesis.voice.damayanti\n",
+      "          name=Damayanti\n",
+      "          languages=['id_ID']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.damayanti\n",
+      "<Voice id=com.apple.speech.synthesis.voice.daniel\n",
+      "          name=Daniel\n",
+      "          languages=['en_GB']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.daniel\n",
+      "<Voice id=com.apple.speech.synthesis.voice.diego\n",
+      "          name=Diego\n",
+      "          languages=['es_AR']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.diego\n",
+      "<Voice id=com.apple.speech.synthesis.voice.ellen\n",
+      "          name=Ellen\n",
+      "          languages=['nl_BE']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.ellen\n",
+      "<Voice id=com.apple.speech.synthesis.voice.fiona\n",
+      "          name=Fiona\n",
+      "          languages=['en-scotland']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.fiona\n",
+      "<Voice id=com.apple.speech.synthesis.voice.Fred\n",
+      "          name=Fred\n",
+      "          languages=['en_US']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=30> com.apple.speech.synthesis.voice.Fred\n",
+      "<Voice id=com.apple.speech.synthesis.voice.ioana\n",
+      "          name=Ioana\n",
+      "          languages=['ro_RO']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.ioana\n",
+      "<Voice id=com.apple.speech.synthesis.voice.joana\n",
+      "          name=Joana\n",
+      "          languages=['pt_PT']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.joana\n",
+      "<Voice id=com.apple.speech.synthesis.voice.jorge\n",
+      "          name=Jorge\n",
+      "          languages=['es_ES']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.jorge\n",
+      "<Voice id=com.apple.speech.synthesis.voice.juan\n",
+      "          name=Juan\n",
+      "          languages=['es_MX']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.juan\n",
+      "<Voice id=com.apple.speech.synthesis.voice.kanya\n",
+      "          name=Kanya\n",
+      "          languages=['th_TH']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.kanya\n",
+      "<Voice id=com.apple.speech.synthesis.voice.karen\n",
+      "          name=Karen\n",
+      "          languages=['en_AU']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.karen\n",
+      "<Voice id=com.apple.speech.synthesis.voice.kyoko\n",
+      "          name=Kyoko\n",
+      "          languages=['ja_JP']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.kyoko\n",
+      "<Voice id=com.apple.speech.synthesis.voice.laura\n",
+      "          name=Laura\n",
+      "          languages=['sk_SK']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.laura\n",
+      "<Voice id=com.apple.speech.synthesis.voice.lekha\n",
+      "          name=Lekha\n",
+      "          languages=['hi_IN']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.lekha\n",
+      "<Voice id=com.apple.speech.synthesis.voice.luca\n",
+      "          name=Luca\n",
+      "          languages=['it_IT']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.luca\n",
+      "<Voice id=com.apple.speech.synthesis.voice.luciana\n",
+      "          name=Luciana\n",
+      "          languages=['pt_BR']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.luciana\n",
+      "<Voice id=com.apple.speech.synthesis.voice.maged\n",
+      "          name=Maged\n",
+      "          languages=['ar_SA']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.maged\n",
+      "<Voice id=com.apple.speech.synthesis.voice.mariska\n",
+      "          name=Mariska\n",
+      "          languages=['hu_HU']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.mariska\n",
+      "<Voice id=com.apple.speech.synthesis.voice.meijia\n",
+      "          name=Mei-Jia\n",
+      "          languages=['zh_TW']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.meijia\n",
+      "<Voice id=com.apple.speech.synthesis.voice.melina\n",
+      "          name=Melina\n",
+      "          languages=['el_GR']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.melina\n",
+      "<Voice id=com.apple.speech.synthesis.voice.milena\n",
+      "          name=Milena\n",
+      "          languages=['ru_RU']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.milena\n",
+      "<Voice id=com.apple.speech.synthesis.voice.moira\n",
+      "          name=Moira\n",
+      "          languages=['en_IE']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.moira\n",
+      "<Voice id=com.apple.speech.synthesis.voice.monica\n",
+      "          name=Monica\n",
+      "          languages=['es_ES']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.monica\n",
+      "<Voice id=com.apple.speech.synthesis.voice.nora\n",
+      "          name=Nora\n",
+      "          languages=['nb_NO']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.nora\n",
+      "<Voice id=com.apple.speech.synthesis.voice.paulina\n",
+      "          name=Paulina\n",
+      "          languages=['es_MX']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.paulina\n",
+      "<Voice id=com.apple.speech.synthesis.voice.rishi\n",
+      "          name=Rishi\n",
+      "          languages=['en_IN']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.rishi\n",
+      "<Voice id=com.apple.speech.synthesis.voice.samantha\n",
+      "          name=Samantha\n",
+      "          languages=['en_US']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.samantha\n",
+      "<Voice id=com.apple.speech.synthesis.voice.sara\n",
+      "          name=Sara\n",
+      "          languages=['da_DK']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.sara\n",
+      "<Voice id=com.apple.speech.synthesis.voice.satu\n",
+      "          name=Satu\n",
+      "          languages=['fi_FI']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.satu\n",
+      "<Voice id=com.apple.speech.synthesis.voice.sinji\n",
+      "          name=Sin-ji\n",
+      "          languages=['zh_HK']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.sinji\n",
+      "<Voice id=com.apple.speech.synthesis.voice.tessa\n",
+      "          name=Tessa\n",
+      "          languages=['en_ZA']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.tessa\n",
+      "<Voice id=com.apple.speech.synthesis.voice.thomas\n",
+      "          name=Thomas\n",
+      "          languages=['fr_FR']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.thomas\n",
+      "<Voice id=com.apple.speech.synthesis.voice.tingting\n",
+      "          name=Ting-Ting\n",
+      "          languages=['zh_CN']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.tingting\n",
+      "<Voice id=com.apple.speech.synthesis.voice.veena\n",
+      "          name=Veena\n",
+      "          languages=['en_IN']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.veena\n",
+      "<Voice id=com.apple.speech.synthesis.voice.Victoria\n",
+      "          name=Victoria\n",
+      "          languages=['en_US']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.Victoria\n",
+      "<Voice id=com.apple.speech.synthesis.voice.xander\n",
+      "          name=Xander\n",
+      "          languages=['nl_NL']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.xander\n",
+      "<Voice id=com.apple.speech.synthesis.voice.yelda\n",
+      "          name=Yelda\n",
+      "          languages=['tr_TR']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.yelda\n",
+      "<Voice id=com.apple.speech.synthesis.voice.yuna\n",
+      "          name=Yuna\n",
+      "          languages=['ko_KR']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.yuna\n",
+      "<Voice id=com.apple.speech.synthesis.voice.yuri\n",
+      "          name=Yuri\n",
+      "          languages=['ru_RU']\n",
+      "          gender=VoiceGenderMale\n",
+      "          age=35> com.apple.speech.synthesis.voice.yuri\n",
+      "<Voice id=com.apple.speech.synthesis.voice.zosia\n",
+      "          name=Zosia\n",
+      "          languages=['pl_PL']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.zosia\n",
+      "<Voice id=com.apple.speech.synthesis.voice.zuzana\n",
+      "          name=Zuzana\n",
+      "          languages=['cs_CZ']\n",
+      "          gender=VoiceGenderFemale\n",
+      "          age=35> com.apple.speech.synthesis.voice.zuzana\n"
      ]
     }
    ],
@@ -32,28 +283,6 @@
     "    engine.say(\"Hello World!\")\n",
     "    engine.runAndWait()\n",
     "    engine.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Windows-10-10.0.22621-SP0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import platform\n",
-    "\n",
-    "platform.platform()"
    ]
   },
   {
